# hr_database

./: .gitignore  README.md  create_csv.py  main.py  pyproject.toml  queries.py  utilities.py
csv_files/: employee_360_dataset.xlsx
database/: create_tables.py  dbconn.py
queries/: department_summary_report.sql  employee_360_dataset.sql  find_countries_with_most_training_completions.sql  find_departments_with_poor_employee_stats.sql  find_highest_paid_employees.sql  find_latest_salary.sql  find_performance_averages.sql  find_performance_averages_by_country.sql  find_top_absent_employees.sql  find_top_five_projects.sql  find_top_five_salaries.sql  find_top_five_training_completers.sql  find_top_three_salaries_per_department.sql  find_top_two_departments_scores.sql  find_widest_performance_gap_for_departments.sql  find_worst_performing_departments.sql  salary_comparison.sql  salary_ranking.sql  training_coverage.sql  training_stats.sql
