[project]
name = "databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.12.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest>=9.0.2",
    "ruff>=0.14.3",
    "ty>=0.0.8",
]
